--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,30 @@
-
-
 {{#each posts as |post|}}
+{{!-- post div --}}
 <div class="card mb-2 ml-2 mr-2">
-  <h6 class="card-header">{{user.first_name}} {{user.last_name}} &#40;updated: {{format_time post.updatedAt}} {{format_date post.updatedAt}}&#41;</h6>
-  <div class="card-body">
+    <h6 class="card-header">{{user.username}} &#40;updated: {{format_time post.updatedAt}} {{format_date post.updatedAt}}&#41;</h6>
+    <div class="card-body">
     <h5 class="card-title">{{post.subject}}</h5>
     <p class="card-text">{{post.article}}</p>
-    <a href="#" class="btn btn-primary">Comments</a>
-  </div>
+    <div class="container mt-5 ml-0 mb-2">
+    <div class="collapse" id="collapseIt">
+    <div class="d-flex justify-content-left row">
+        <div class="col-md-12">
+            <div class="d-flex flex-column comment-section">
+                <div class="bg-white p-2">
+                    {{!-- Comments div partial --}}
+                    {{>comments}}
+                </div>
+                <div class="bg-light p-2">
+                    <div class="d-flex flex-row align-items-start"><textarea class="form-control ml-1 shadow-none textarea"></textarea></div>
+                    <div class="mt-2 mb-1 text-right"><button class="btn btn-primary btn-sm shadow-none" type="button">Post comment</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    <a class="btn btn-primary mt-2" data-toggle="collapse" href="#collapseIt" role="button" >Comments</a>
+    </div>
+    </div>
 </div>
 {{/each}}
