--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
-<div class="row justify-space-between-md">
+<div class="row justify-space-between-md m-5">
   <div class="login-card">
     <h2 class="page-title">Login</h2>
-    <form class="form login-form">
+    <form class="form login-form border mr-2 p-2">
       <div class="form-group">
         <label for="username-login">Username:</label>
         <input class="form-input" type="text" id="username-login" />
@@ -15,9 +15,11 @@
       </div>
     </form>
   </div>
+  </form>
+
   <div class="login-card">
     <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
+    <form class="form signup-form border  p-2">
       <div class="form-group">
         <label for="username-signup">Username:</label>
         <input class="form-input" type="text" id="username-signup" />
@@ -32,5 +34,6 @@
     </form>
   </div>
 </div>
+
 
 <script src="/js/login.js"></script>
