--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,35 +1,28 @@
-{{#each posts as |post|}}
-{{!-- post div --}}
-<div class="card mb-2 ml-2 mr-2">
-    <h6 class="card-header">{{user.username}} {{loggedIn}} &#40;updated: {{format_time post.updatedAt}} {{format_date post.updatedAt}}&#41;</h6>
-    <div class="card-body">
-    <h5 class="card-title">{{post.subject}}</h5>
-    <p class="card-text">{{post.article}}</p>
-    <div class="container mt-5 ml-0 mb-2">
-    <div class="collapse" id="collapseIt">
-    <div class="d-flex justify-content-left row">
-        <div class="col-md-12">
-            <div class="d-flex flex-column comment-section">
-                <div class="bg-white p-2">
-                    {{!-- Comments div partial --}}
-                    {{>comments}}
-                </div>
-                {{#if ../loggedIn}}
-                <div class="bg-light p-2">
-                    <div class="d-flex flex-row align-items-start"><textarea class="form-control ml-1 shadow-none textarea"></textarea></div>
-                    <div class="mt-2 mb-1 text-right"><button class="btn btn-primary btn-sm shadow-none" type="button">Post comment</button>
-                </div>
-                {{else}}
-                    <p class="text-danger d-flex flex-row align-items-start">You must be logged in to post a comment.</p>
-                {{/if}}
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
-    <a class="btn btn-primary mt-2" data-toggle="collapse" href="#collapseIt" role="button" >Comments</a>
-    </div>
-    </div>
-</div>
-{{/each}}
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 ">
+  <a class="navbar-brand" href="#">Tech-Blog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard">Dashboard</a>
+      </li>
+      {{#if loggedIn}}
+      <li class="nav-item">
+        <a class="nav-link" id="logout" href="">Logout</a>
+      </li>
+      {{else}}
+      <li class="nav-item">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      {{/if}}
+    </ul>
+  </div>
+</nav>
+
+
 
