--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<div class="text-center d-flex justify-content-center">
 <div class="row justify-space-between-md m-5">
   <div class="login-card">
     <h2 class="page-title">Login</h2>
@@ -34,6 +35,6 @@
     </form>
   </div>
 </div>
-
+</div>
 
 <script src="/js/login.js"></script>
