--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,3 +1,4 @@
+{{!-- partial comments --}}
 {{#each comments as |comment|}}
     <div class="d-flex flex-column justify-content-start ml-0"><span class="d-block name">{{user.username}}</span><span class="date text-black-50">posted {{format_date comment.updatedAt}} at {{format_time comment.updatedAt}}</span></div>
       <div class="mt-2">
